--- a/and-bible/build.gradle
+++ b/and-bible/build.gradle
@@ -3,13 +3,17 @@
 buildscript {
     ext.kotlin_version = '1.2.41'
     ext.anko_version = '0.10.5'
+    ext.serialization_version = '0.5.0'
+
     repositories {
         jcenter()
         google()
+        maven { url "https://kotlin.bintray.com/kotlinx" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlinx:kotlinx-gradle-serialization-plugin:$serialization_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
