--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -41,7 +41,11 @@ android {
 
     testOptions {
         // prevent logger errors
-        unitTests.returnDefaultValues = true
+        unitTests {
+            returnDefaultValues = true
+            includeAndroidResources = true
+        }
+
     }
 
     packagingOptions {
@@ -62,7 +66,7 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.15'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.15'
     kapt 'com.google.dagger:dagger-compiler:2.15'
-    compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
 
     implementation 'de.greenrobot:eventbus:2.4.0'
     implementation 'org.jdom:jdom2:2.0.6'
@@ -71,7 +75,7 @@ dependencies {
     implementation 'org.apache.commons:commons-compress:1.12'
     implementation 'de.psdev.slf4j-android-logger:slf4j-android-logger:1.0.5'
 
-    compile "org.jetbrains.anko:anko-commons:$anko_version"
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
 
     implementation 'org.apache.lucene:lucene-core:3.0.3'
     implementation 'org.apache.lucene:lucene-snowball:3.0.3'
@@ -81,11 +85,13 @@ dependencies {
     implementation 'com.android.support:support-annotations:25.3.1'
 
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-core:2.8.9'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:3.8'
 }
+
 repositories {
 	mavenCentral()
     maven { url "https://kotlin.bintray.com/kotlinx" }
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 }
