--- a/and-bible/app/src/main/AndroidManifest.xml
+++ b/and-bible/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.WRITE_SETTINGS"/>
-	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
 	<!-- allow use on Google TV -->
 	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
@@ -159,6 +159,8 @@
             android:name="net.bible.android.view.activity.installzip.InstallZip"
             android:label="@string/install_zip" >
         </activity>
+
+        <service android:name="net.bible.service.device.speak.TextToSpeechNotificationService"/>
 
         <!-- allow use with Samsung Note multi-window http://stackoverflow.com/questions/14111052/adding-multi-window-support-to-android-application -->
 		<uses-library android:required="false" android:name="com.sec.android.app.multiwindow" />
