--- a/and-bible/app/src/main/AndroidManifest.xml
+++ b/and-bible/app/src/main/AndroidManifest.xml
@@ -162,8 +162,8 @@
         </activity>
 
         <service android:name="net.bible.service.device.speak.TextToSpeechNotificationService"/>
-        
-        <receiver android:name=".SpeakWidget">
+
+        <receiver android:name=".SpeakWidget1">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
@@ -172,7 +172,27 @@
                     android:name="android.appwidget.provider"
                     android:resource="@xml/speak_widget_info"/>
         </receiver>
-        
+
+        <receiver android:name=".SpeakWidget2">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/speak_widget_info"/>
+        </receiver>
+
+        <receiver android:name=".SpeakWidget3">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/speak_widget_info"/>
+        </receiver>
+
         <!-- allow use with Samsung Note multi-window http://stackoverflow.com/questions/14111052/adding-multi-window-support-to-android-application -->
 		<uses-library android:required="false" android:name="com.sec.android.app.multiwindow" />
 		<meta-data android:name="com.sec.android.support.multiwindow" android:value="true" />
