--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     // allow annotations like UIThread, StringRes see: https://developer.android.com/reference/android/support/annotation/package-summary.html
     implementation 'com.android.support:support-annotations:25.3.1'
 
+    testImplementation 'org.apache.httpcomponents:httpclient:4.3.2'
+
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
     testImplementation 'org.mockito:mockito-core:1.10.19'
     testImplementation 'junit:junit:4.12'
