--- a/and-bible/app/src/main/AndroidManifest.xml
+++ b/and-bible/app/src/main/AndroidManifest.xml
@@ -163,6 +163,13 @@
 
         <service android:name="net.bible.service.device.speak.TextToSpeechNotificationManager$ForegroundService"/>
 
+        <receiver android:name="net.bible.service.device.speak.TextToSpeechNotificationManager$NotificationReceiver"
+                  android:exported="false">
+            <intent-filter>
+                <action android:name="net.bible.service.device.speak.NOTIFICATION_RECEIVER"/>
+            </intent-filter>
+        </receiver>
+
         <receiver android:name=".SpeakWidget1">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
