--- a/and-bible/app/src/main/AndroidManifest.xml
+++ b/and-bible/app/src/main/AndroidManifest.xml
@@ -9,9 +9,7 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.WRITE_SETTINGS"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-    <!-- Needed at least still in Kitkat but not in new Android versions -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:maxSdkVersion="22" android:name="android.permission.READ_PHONE_STATE" />
 
 	<!-- allow use on Google TV -->
 	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
