--- a/and-bible/app/src/main/AndroidManifest.xml
+++ b/and-bible/app/src/main/AndroidManifest.xml
@@ -194,6 +194,16 @@
                     android:name="android.appwidget.provider"
                     android:resource="@xml/speak_widget3_info"/>
         </receiver>
+        <receiver android:name=".SpeakWidgetManager$SpeakWidget4">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/speak_widget4_info"/>
+        </receiver>
+
         <receiver android:name=".SpeakWidgetManager$SpeakBookmarkWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
