--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -5,14 +5,14 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlinx-serialization'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     /** these config values override those in AndroidManifest.xml.  Can also set versionCode and versionName */
     defaultConfig {
         applicationId "net.bible.android.activity"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
 		vectorDrawables.useSupportLibrary = true
     }
 
@@ -56,17 +56,19 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
 
     implementation files('libs/jsword.jar')
     implementation files('libs/mmseg4j-all-1.8.4.jar')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.9.0"
+
     implementation 'com.google.dagger:dagger:2.16'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
     kapt 'com.google.dagger:dagger-compiler:2.16'
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
+    //implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
 
     implementation 'de.greenrobot:eventbus:2.4.0'
 
