--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -56,8 +56,9 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.media:media:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha01'
 
     implementation files('libs/jsword.jar')
     implementation files('libs/mmseg4j-all-1.8.4.jar')
@@ -86,14 +87,14 @@ dependencies {
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
 
     // allow annotations like UIThread, StringRes see: https://developer.android.com/reference/android/support/annotation/package-summary.html
-    implementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'androidx.annotation:annotation:1.0.0'
 
     testImplementation 'org.apache.httpcomponents:httpclient:4.3.2'
 
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
     testImplementation 'org.mockito:mockito-core:2.8.9'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.robolectric:robolectric:3.8'
+    testImplementation 'org.robolectric:robolectric:4.0.2'
 }
 
 repositories {
