--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.9.0"
+    compile "org.jetbrains.kotlin:kotlin-reflect:1.3.10"
 
     implementation 'com.google.dagger:dagger:2.16'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
