--- a/and-bible/app/src/main/AndroidManifest.xml
+++ b/and-bible/app/src/main/AndroidManifest.xml
@@ -166,43 +166,43 @@
 
         <receiver android:name="net.bible.service.device.speak.TextToSpeechNotificationManager$NotificationReceiver" android:exported="false"/>
 
-        <receiver android:name=".SpeakWidgetManager$SpeakWidget1">
+        <receiver android:name=".SpeakWidgetManager$SmallSpeakControlWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
 
             <meta-data
                     android:name="android.appwidget.provider"
-                    android:resource="@xml/speak_widget1_info"/>
+                    android:resource="@xml/small_speak_control_widget_info"/>
         </receiver>
 
-        <receiver android:name=".SpeakWidgetManager$SpeakWidget2">
+        <receiver android:name=".SpeakWidgetManager$MiddleSpeakControlWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
 
             <meta-data
                     android:name="android.appwidget.provider"
-                    android:resource="@xml/speak_widget2_info"/>
+                    android:resource="@xml/middle_speak_control_widget_info"/>
         </receiver>
 
-        <receiver android:name=".SpeakWidgetManager$SpeakWidget3">
+        <receiver android:name=".SpeakWidgetManager$LargeSpeakControlWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
 
             <meta-data
                     android:name="android.appwidget.provider"
-                    android:resource="@xml/speak_widget3_info"/>
+                    android:resource="@xml/large_speak_control_widget_info"/>
         </receiver>
-        <receiver android:name=".SpeakWidgetManager$SpeakWidget4">
+        <receiver android:name=".SpeakWidgetManager$SpeakTextControlWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
 
             <meta-data
                     android:name="android.appwidget.provider"
-                    android:resource="@xml/speak_widget4_info"/>
+                    android:resource="@xml/speak_text_control_widget_info"/>
         </receiver>
 
         <receiver android:name=".SpeakWidgetManager$SpeakBookmarkWidget">
