--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -14,6 +14,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
 		vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -51,7 +52,6 @@ android {
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/main.kotlin_module'
     }
 }
 
@@ -65,7 +65,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.9.0"
-    compile "org.jetbrains.kotlin:kotlin-reflect:1.3.10"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.10"
 
     implementation 'com.google.dagger:dagger:2.16'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
