--- a/and-bible/app/src/main/AndroidManifest.xml
+++ b/and-bible/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:maxSdkVersion="22" android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
 	<!-- allow use on Google TV -->
 	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
@@ -22,6 +23,8 @@
 	
 	<application android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:label="@string/app_name" android:name="net.bible.android.BibleApplication" android:theme="@style/AppThemeDay" android:allowBackup="true" android:resizeableActivity="true"
                  android:fullBackupContent="@xml/backup_descriptor">
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+
         <!-- deprecated but necessary to prevent old shortcut breaking -->
         <activity android:name=".StartupActivity"
                   android:label="@string/app_name"
