--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -52,15 +52,24 @@ android {
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+        //exclude 'androidsupportmultidexversion.txt'
     }
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.media:media:1.0.0'
+    
     implementation 'com.google.android.material:material:1.1.0-alpha01'
-
+    
+    // To support Android 4.4
+    //implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
+    
+    // We are using our custom-built jsword.jar (see jsword-tweaks folder)
     implementation files('libs/jsword.jar')
+    
+    // TODO: is this used anywhere? Maybe indexing?
     implementation files('libs/mmseg4j-all-1.8.4.jar')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -70,7 +79,6 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.16'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
     kapt 'com.google.dagger:dagger-compiler:2.16'
-    //implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
 
     implementation 'de.greenrobot:eventbus:2.4.0'
 
