Set abortOnError false in lintOptions (for a while)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     lintOptions {
         disable 'MissingTranslation'
         disable 'ExtraTranslation'
+        abortOnError false // TODO: enable this later
     }
 
     compileOptions {
