--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,11 @@ android:
   components:
     - build-tools-28.0.3
     - android-28
-
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
