Run only unit tests in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ cache:
 
 before_script:
   - ./gradlew testReleaseUnitTest --tests net.bible.service.download.CrosswireRepoIT
+
+script: ./gradlew testReleaseUnitTest
