Add lint checking to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ cache:
 before_script:
   - ./gradlew testReleaseUnitTest --tests net.bible.service.download.CrosswireRepoIT
 
-script: ./gradlew testReleaseUnitTest
+script: ./gradlew --console plain build
