--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,9 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 
-[*.{kt,java}]
+[*.{java}]
 indent_style = tab
 
+[*.{kt}]
+indent_style = space
+indent_size = 4
