Set enableSplit = false to android.bundle.language

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,12 @@ android {
 
     }
 
+    bundle {
+        language {
+            enableSplit = false
+        }
+    }
+
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
