--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,17 @@
 		android:anyDensity="true"
 	/>
 	
-	<application android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:label="@string/app_name" android:name="net.bible.android.BibleApplication" android:theme="@style/AppThemeDay" android:allowBackup="true" android:resizeableActivity="true"
-                 android:fullBackupContent="@xml/backup_descriptor"
-        tools:ignore="GoogleAppIndexingWarning">
+	<application android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="@string/app_name"
+        android:name="net.bible.android.BibleApplication"
+        android:theme="@style/AppThemeDay"
+        android:allowBackup="true"
+        android:resizeableActivity="true"
+        android:fullBackupContent="@xml/backup_descriptor"
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning"
+        >
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
         <!-- deprecated but necessary to prevent old shortcut breaking -->
