--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -168,7 +168,33 @@
         </activity>
         <activity
             android:name="net.bible.android.view.activity.installzip.InstallZip"
-            android:label="@string/install_zip" >
+            android:label="@string/install_zip_module" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data
+                    android:scheme="http"
+                    android:host="*"
+                    android:pathPattern=".*\\.zip"/>
+                <data
+                    android:scheme="https"
+                    android:host="*"
+                    android:pathPattern=".*\\.zip"/>
+            </intent-filter>
+            <intent-filter tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data
+                    android:mimeType="application/zip"
+                    />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+                <action android:name="android.intent.action.SEND_MULTIPLE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="application/zip"/>
+            </intent-filter>
         </activity>
 
         <service android:name="net.bible.service.device.speak.TextToSpeechNotificationManager$ForegroundService"/>
