--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,10 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
     implementation 'androidx.media:media:1.0.0'
-    
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
+
+    implementation 'com.google.android.material:material:1.0.0'
     
     // To support Android 4.4
     implementation 'androidx.multidex:multidex:2.0.1'
