--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'androidx.media:media:1.0.0'
 
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     
     // To support Android 4.4
     implementation 'androidx.multidex:multidex:2.0.1'
