--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,7 +106,7 @@ dependencies {
 
     testImplementation "org.robolectric:shadows-multidex:4.0.2"
     testImplementation 'org.apache.httpcomponents:httpclient:4.3.2'
-
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
     testImplementation 'org.mockito:mockito-core:2.8.9'
     testImplementation 'junit:junit:4.12'
