--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,18 +69,18 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
+
     // To support Android 4.4
     implementation 'androidx.multidex:multidex:2.0.1'
     
-    // We are using our custom-built jsword.jar (see jsword-tweaks folder)
-    implementation files('libs/jsword.jar')
-    
-    // TODO: is this used anywhere? Maybe indexing?
-    implementation files('libs/mmseg4j-all-1.8.4.jar')
+
+    // allow annotations like UIThread, StringRes see: https://developer.android.com/reference/android/support/annotation/package-summary.html
+    implementation 'androidx.annotation:annotation:1.0.1'
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.9.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.9.1"
 
     implementation 'com.google.dagger:dagger:2.16'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
@@ -88,22 +88,21 @@ dependencies {
 
     implementation 'de.greenrobot:eventbus:2.4.1'
 
-    // JSword requirements (see ivy.xml in jsword-tweaks)
-    implementation 'org.apache.commons:commons-compress:1.12' // Note: versions > 1.12 will fail with Android Nougat and older.
-    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
-    implementation 'org.jdom:jdom2:2.0.6'
-    implementation 'org.apache.lucene:lucene-core:3.0.3'
-    implementation 'org.apache.lucene:lucene-analyzers:3.0.3'
-    implementation 'org.apache.lucene:lucene-snowball:3.0.3'
-
     implementation 'org.apache.commons:commons-lang3:3.5'
 
+
+    // We are using our custom-built jsword.jar (see jsword-tweaks repository)
+    implementation files('libs/jsword.jar')
+
+    // JSword related
+    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    implementation 'org.apache.commons:commons-compress:1.12' // Note: versions > 1.12 will fail with Android Nougat and older.
+    implementation "com.chenlb.mmseg4j:mmseg4j-analysis:1.8.6"
+    implementation 'org.jdom:jdom2:2.0.6'
+    implementation 'org.apache.lucene:lucene-analyzers:3.1.0'
     implementation 'de.psdev.slf4j-android-logger:slf4j-android-logger:1.0.5'
-    implementation "org.jetbrains.anko:anko-commons:$anko_version"
 
-    // allow annotations like UIThread, StringRes see: https://developer.android.com/reference/android/support/annotation/package-summary.html
-    implementation 'androidx.annotation:annotation:1.0.1'
-
+    // TESTS
     testImplementation "org.robolectric:shadows-multidex:4.0.2"
     testImplementation 'org.apache.httpcomponents:httpclient:4.3.2'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
@@ -116,4 +115,6 @@ dependencies {
 repositories {
 	mavenCentral()
     maven { url "https://kotlin.bintray.com/kotlinx" }
+    //maven { url "http://central.maven.org/maven2/" }
+    //maven { url "https://oss.sonatype.org/content/repositories/releases"}
 }
