--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
-
+before_install:
+    - yes | sdkmanager "platforms;android-28"
 before_script:
   - ./gradlew testReleaseUnitTest --tests net.bible.service.download.CrosswireRepoIT
 
