--- a/.editorconfig
+++ b/.editorconfig
@@ -7,11 +7,11 @@ end_of_line=lf
 insert_final_newline=true
 charset=utf-8
 
-[*.{java}]
+[*.java]
 indent_style=tab
 max_line_length=120
 
-[*.{kt}]
+[*.kt]
 indent_style=space
 indent_size=4
 max_line_length=120
