--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,9 +66,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
     implementation 'androidx.media:media:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
 
     // To support Android 4.4
