--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:name="net.bible.android.view.activity.page.MainBibleActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale"
             android:windowSoftInputMode="stateHidden|adjustResize"
-            android:launchMode="singleTask"
+            android:launchMode="singleInstance"
             android:label="@string/app_name" />
         <activity
             android:name="net.bible.android.view.activity.navigation.ChooseDocument"
