--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
     implementation 'androidx.media:media:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.core:core-ktx:1.0.1'
 
     implementation 'com.google.android.material:material:1.0.0'
     implementation "org.jetbrains.anko:anko-commons:0.10.8"
