Added notice about permission to Prof. Horner reading plan

--- a/app/src/main/assets/readingplan/y1ot6nt4_profHorner.properties
+++ b/app/src/main/assets/readingplan/y1ot6nt4_profHorner.properties
@@ -1,3 +1,4 @@
+# Courtesy of Porf. Horner, permission granted
 1=Matt.1,Gen.1,Rom.1,1Thess.1,Job.1,Ps.1,Prov.1,Josh.1,Isa.1,Acts.1
 2=Matt.2,Gen.2,Rom.2,1Thess.2,Job.2,Ps.2,Prov.2,Josh.2,Isa.2,Acts.2
 3=Matt.3,Gen.3,Rom.3,1Thess.3,Job.3,Ps.3,Prov.3,Josh.3,Isa.3,Acts.3
