Added M'Cheyne reading plan name, description

--- a/app/src/main/assets/readingplan/y1ot1nt2_mcheyne.properties
+++ b/app/src/main/assets/readingplan/y1ot1nt2_mcheyne.properties
@@ -1,3 +1,8 @@
+# M'Cheyne 1-Year 4-chapter/day
+# This plan is based on the M’Cheyne reading system, featuring four different readings
+# for use in both family and personal devotions. Each day has two passages from the Old Testament,
+# one from the New Testament, and one from either the Psalms or the Gospels. In one year,
+# you read the Old Testament once and the New Testament and Psalms twice.
 1=Gen.1, Matt.1, Ezra.1, Acts.1
 2=Gen.2, Matt.2, Ezra.2, Acts.2
 3=Gen.3, Matt.3, Ezra.3, Acts.3
