--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
 
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
     /** these config values override those in AndroidManifest.xml.  Can also set versionCode and versionName */
     defaultConfig {
         applicationId "net.bible.android.activity"
